@@ -62,6 +62,14 @@ android {
     composeOptions {
         kotlinCompilerExtensionVersion '1.4.3'
     }
+    testOptions {
+        unitTests {
+            includeAndroidResources = true
+            all {
+                jvmArgs '-noverify', '--add-opens', 'java.base/java.lang=ALL-UNNAMED', '--add-opens', 'java.base/java.io=ALL-UNNAMED'
+            }
+        }
+    }
 
     packagingOptions {
         resources {
@@ -106,6 +114,12 @@ dependencies {
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.27.0"
     implementation "io.coil-kt:coil-compose:2.2.0"
     implementation 'androidx.appcompat:appcompat:1.6.1'
-
+    androidTestImplementation 'androidx.arch.core:core-testing:2.2.0'
+    testImplementation 'org.mockito:mockito-core:4.0.0'
+    testImplementation 'androidx.test:core:1.5.0'
+    testImplementation 'org.robolectric:robolectric:4.12'
+    testImplementation 'org.mockito.kotlin:mockito-kotlin:4.0.0'
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.0'
+    testImplementation 'io.mockk:mockk:1.12.0'
 
 }
